--- a/SpaceWarsHex.ShipBuilder/MainWindow.xaml
+++ b/SpaceWarsHex.ShipBuilder/MainWindow.xaml
@@ -1,12 +1,15 @@
-﻿<Window x:Class="SpaceWarsHex.ShipBuilder.MainWindow"
+﻿<rxui:ReactiveWindow x:Class="SpaceWarsHex.ShipBuilder.MainWindow"
+        x:TypeArguments="vm:WorkspaceViewModel"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib"
+        xmlns:rxui="http://reactiveui.net"
+        xmlns:vm="clr-namespace:SpaceWarsHex.ShipBuilder.ViewModels"
         xmlns:local="clr-namespace:SpaceWarsHex.ShipBuilder"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-
     </Grid>
-</Window>
+</rxui:ReactiveWindow>  
