Added dialog window, Threasholds MVVM.

--- a/SpaceWarsHex.ShipBuilder/App.xaml
+++ b/SpaceWarsHex.ShipBuilder/App.xaml
@@ -2,8 +2,17 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:SpaceWarsHex.ShipBuilder"
+             xmlns:cv="clr-namespace:SpaceWarsHex.ShipBuilder.Converters"
              >
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <cv:DoubleToIntegerConverter x:Key="DoubleToIntegerConverter" />
+            <cv:IntegerToDoubleConverter x:Key="IntegerToDoubleConverter" />
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Light.Blue.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
