--- a/SpaceWarsHex.ShipBuilder/MainWindow.xaml
+++ b/SpaceWarsHex.ShipBuilder/MainWindow.xaml
@@ -36,7 +36,7 @@
             </TabControl.ContentTemplate>
             <TabControl.ItemTemplate>
                 <DataTemplate>
-                    <TextBlock Text="{Binding Name}" />
+                    <TextBlock Text="{Binding Name}" FontSize="12" />
                 </DataTemplate>
             </TabControl.ItemTemplate>
         </TabControl>
