--- a/SpaceWarsHex.ShipBuilder/Views/ShipView.xaml
+++ b/SpaceWarsHex.ShipBuilder/Views/ShipView.xaml
@@ -16,6 +16,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition />
         </Grid.RowDefinitions>
         <Grid Grid.Row="0" Grid.ColumnSpan="3" Margin="5">
@@ -47,7 +48,10 @@
         <Expander Grid.Row="2" Grid.Column="2" Header="Drive" IsExpanded="False" >
             <local:DriveView x:Name="DriveHost" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" />
         </Expander>
-        <Expander Grid.Row="3" Grid.Column="2" Header="Energy Weapons">
+        <Expander Grid.Row="3" Grid.Column="2" Header="Shields" IsExpanded="False" >
+            <local:ShieldsView x:Name="ShieldsHost" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" />
+        </Expander>
+        <Expander Grid.Row="4" Grid.Column="2" Header="Energy Weapons">
             <local:EnergyWeaponsView x:Name="EnergyWeaponsHost" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" />
             <!--<Grid>
                 <Grid.RowDefinitions>
